--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emoji-mart/react": "^1.1.1",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "autoprefixer": "10.4.14",
+    "emoji-mart": "^5.5.2",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "eslint-config-prettier": "^8.8.0",
