--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
+    "firebase": "9.19.1",
     "next": "13.3.0",
+    "next-auth": "^4.22.0",
     "postcss": "8.4.21",
     "prettier": "^2.8.7",
     "react": "18.2.0",
