--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emoji-mart/react": "^1.1.1",
+    "@headlessui/react": "^1.7.14",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "autoprefixer": "10.4.14",
     "emoji-mart": "^5.5.2",
@@ -27,6 +28,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-moment": "^1.1.3",
-    "tailwindcss": "3.3.1"
+    "tailwindcss": "3.3.1",
+    "zustand": "^4.3.7"
   }
 }
